2008-07-11  Chris Morley

	* windows-vc2005/Distribution/NSISScriptToCreateInstallerOBF.nsi
	Set Env Var BABEL_DATADIR to installation directory. Safer than 
	relying on finding the data files in the current directory.
	
	* include/openbabel/builder.h, src/builder.cpp: check whether
	fragments.txt is loaded successfully and if not return false
	from Build().

2008-07-09  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/python/pybel.py: Bug fix for make3D for linear molecules.
	Fixes bug 2014055. Minor doc fixes. Remember to close output files
	in Molecule.write().

2008-07-03  Noel O'Boyle  <baoilleach@gmail.com>

	* windows-vc2005/OBPythonOBF/setup.py: Update setup.py to include
	forcefield files when installing

2008-07-03  Michael Banck  <mbanck@gmx.net>

	* scripts/Makefile.am (dist-hook): Do not fail if make distclean does
	not succeed in the perl and ruby directories.
	* scripts/Makefile.in: Regenerated.

	* data/Makefile.am (table_DATA): Added plugindefines.txt.
	* data/Makefile.in: Regenerated.
	* data/CMakelists.txt: Removed space-groups.xsl from to_install.

	* test/cmlreadfile.cpp: Read files from TESTDATADIR, not relative to
	current directory.
	* test/wrapper.sh: Use ${srcdir}, not ${top_srcdir} to set
	$BABEL_DATADIR.
	* test/wrapper.sh: Run inchi tests from source directory if ${srcdir}
	is non-empty.  Set and export TESTDATADIR.

2008-07-03  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/ruby/README: Updated build instructions

2008-07-03  Michael Banck  <mbanck@gmx.net>

	* src/CMakelists.txt (LIBRARY_VERSION): New variable.
	* src/CMakelists.txt (BABEL_LIBRARY): Set VERSION property to
	${LIBRARY_VERSION}.
	
2008-07-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/Makefile.am, src/CMakeLists.txt: Update SONAME to 3 for
	version 2.2.0 release.

2008-07-03  Marcus D. Hanwell  <marcus@cryos.org>

	* CMakeLists.txt: Relaxed the CMake requirement to 2.4.7.

	* include/openbabel/griddata.h, src/griddata.cpp: Added three new